src/test/resources/type/bad/append-3.fika
x = [[1,2], ["hej","hejsan"]]
y = x